--- a/Resources/Prototypes/_Mono/Shipyard/Scrap/mcchilly.yml
+++ b/Resources/Prototypes/_Mono/Shipyard/Scrap/mcchilly.yml
@@ -5,19 +5,17 @@
   description: For when the heat is up, its best to take it- who wrote this shit?.
   price: 12500
   category: Small
-  group: Shipyard
-  shuttlePath: /Maps/_Mono/Shuttles/mcchilly.yml
+  group: Scrap
+  shuttlePath: /Maps/_Mono/Shuttles/Scrap/mcchilly.yml
   guidebookPage: Null
   class:
+  - Scrapyard
   - Civilian
-  - Kitchen
-  engine:
-  - APU
 
 - type: gameMap
   id: McChilly
   mapName: 'SV McChilly'
-  mapPath: /Maps/_Mono/Shuttles/mcchilly.yml
+  mapPath: /Maps/_Mono/Shuttles/Scrap/mcchilly.yml
   minPlayers: 0
   stations:
     McChilly:
