--- a/Resources/Prototypes/_Mono/Shipyard/Scrap/mcchilly.yml
+++ b/Resources/Prototypes/_Mono/Shipyard/Scrap/mcchilly.yml
@@ -1,9 +1,9 @@
 - type: vessel
   id: McChilly
   parent: BaseVessel
-  name: SV McChilly
+  name: AES McChilly
   description: For when the heat is up, its best to take it- who wrote this shit?.
-  price: 12500
+  price: 16000
   category: Small
   group: Shipyard
   shuttlePath: /Maps/_Mono/Shuttles/mcchilly.yml
