--- a/Resources/Prototypes/_Mono/Shipyard/Scrap/mcchilly.yml
+++ b/Resources/Prototypes/_Mono/Shipyard/Scrap/mcchilly.yml
@@ -4,32 +4,32 @@
 
 # Shuttle Notes:
 - type: vessel
-  id: McChicken
+  id: McChilly
   parent: BaseVessel
-  name: AES McChicken
-  description: For those who enjoy ungodly ammounts of calories, now made on the go!.
-  price: 26000
-  category: Medium
+  name: AES McChilly
+  description: For when the heat is up, its best to take it- who wrote this shit?.
+  price: 16000
+  category: Small
   group: Shipyard
-  shuttlePath: /Maps/_Mono/Shuttles/mcchicken.yml
+  shuttlePath: /Maps/_Mono/Shuttles/mcchilly.yml
   guidebookPage: Null
   class:
   - Civilian
   - Kitchen
   engine:
-  - Uranium
+  - APU
 
 - type: gameMap
-  id: McChicken
-  mapName: 'SV McChicken'
-  mapPath: /Maps/_Mono/Shuttles/mcchicken.yml
+  id: McChilly
+  mapName: 'SV McChilly'
+  mapPath: /Maps/_Mono/Shuttles/mcchilly.yml
   minPlayers: 0
   stations:
-    McChicken:
+    McChilly:
       stationProto: StandardFrontierVessel
       components:
         - type: StationNameSetup
-          mapNameTemplate: 'McChicken CIV{1}'
+          mapNameTemplate: 'McChilly CIV{1}'
           nameGenerator:
             !type:NanotrasenNameGenerator
             prefixCreator: '14'
