--- a/Resources/Prototypes/_Mono/Shipyard/mcchilly.yml
+++ b/Resources/Prototypes/_Mono/Shipyard/mcchilly.yml
@@ -14,6 +14,13 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-or-later
 
+# Author Info
+# GitHub: bluebrouny
+# Discord: half_spinning_monkey
+
+# Minor edits by Redrover1760 (github)
+
+# Shuttle Notes:
 - type: vessel
   id: McChilly
   parent: BaseVessel
