--- a/Resources/Prototypes/_Mono/Shipyard/mcchilly.yml
+++ b/Resources/Prototypes/_Mono/Shipyard/mcchilly.yml
@@ -25,7 +25,7 @@
   id: McChilly
   parent: BaseVessel
   name: AES McChilly
-  description: For when the heat is up, its best to take it- who wrote this shit?.
+  description: A small ice cream ship. For when the heat is up, its best to take it- who wrote this shit?.
   price: 17500
   category: Small
   group: Shipyard
