--- a/Resources/Maps/_Mono/Shuttles/mcchilly.yml
+++ b/Resources/Maps/_Mono/Shuttles/mcchilly.yml
@@ -1330,7 +1330,7 @@ entities:
         Notes:
 
 
-        Ice cream and Root bear float jugs stored in the wall fridge locker.
+        Ice cream and Root beer float jugs stored in the wall fridge locker.
 
 
         Extra plasteel chef restocks for glasses stored in the service wall locker.
