Here we go, radar implant for test

--- a/Resources/Prototypes/_Mono/Entities/Objects/Misc/implanters.yml
+++ b/Resources/Prototypes/_Mono/Entities/Objects/Misc/implanters.yml
@@ -5,3 +5,11 @@
   components:
   - type: Implanter
     implant: UsspTrackingImplant
+
+- type: entity
+  id: RadarImplanter
+  suffix: Radar Implant
+  parent: BaseImplantOnlyImplanter
+  components:
+  - type: Implanter
+    implant: RadarImplant
